fixed header spacing

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -115,7 +115,10 @@ h1 {
 }
 
 .header{
-    background-color:blue;
+    padding-top:5%;
+}
+.last{
+    margin-top:5%;
 }
 .search{
     margin-top: 50%;
